feat: add home page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Playground</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./style.css" />
     <script src="./script.js" defer></script>
   </head>
@@ -11,19 +18,42 @@
     <!-- feat: add initial project files -->
     <header>
       <nav>
-        <img src="./logo.png" alt="Frontend Playground Logo" />
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contributers</a>
-        <a href="#">Theme</a>
+        <div>
+          <!-- <img src="./logo.png" alt="Frontend Playground Logo" /> -->
+          <h1>Frontend Playground</h1>
+        </div>
+        <div>
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Theme</a>
+        </div>
       </nav>
-      <h1>Frontend Playground</h1>
-      <p>Sharpen your frontend skills with hands-on UI coding challenges.</p>
-      <button>Start Coding</button>
-      <footer>
-        <p>Made with ❤️ by <a href="#">Frontend Playground</a></p>
-        <p>Copyright © 2023 Frontend Playground</p>
-      </footer>
     </header>
+    <main>
+      <div class="hero">
+        <h1>Frontend Playground</h1>
+        <p>Sharpen your frontend skills with hands-on UI coding challenges.</p>
+      </div>
+      <section class="project-list">
+        <div class="project-cards">
+          <a href="./JavaScript/index.html" class="project-card">
+            <i class="fa-brands fa-js"></i>
+            <h3>JavaScript</h3>
+            <p>Vanilla JavaScript Projects</p>
+          </a>
+        </div>
+        <div class="project-cards">
+          <a href="" class="project-card">
+            <i class="fa-brands fa-react"></i>
+            <h3>ReactJS</h3>
+            <p>ReactJS Projects</p>
+          </a>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <p>Made with ❤️ by <a href="#">Frontend Playground</a></p>
+      <p>Copyright © 2025 Frontend Playground</p>
+    </footer>
   </body>
 </html>
